--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,13 @@ spring:
             allowed-methods: "*"
             allowed-headers: "*"
             allow-credentials: true
+      httpclient:
+        websocket:
+          max-frame-payload-length: 20000000
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-
+#logging:
+#  level:
+#    root: debug
